overflow hidden en boton support

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         "floating-chat.donateButton.text": "Support Me",
         "floating-chat.donateButton.background-color": "#22C55E",
         "floating-chat.donateButton.text-color": "#fff",
+        "floating-chat.donateButton.overflow": "hidden",
       });
     </script>
   </body>
