boton de support cambio de colores, validando bug

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
-    <script>
-      kofiWidgetOverlay.draw("manuelcalso", {
-        type: "floating-chat",
-        "floating-chat.donateButton.text": "Support Me",
-        "floating-chat.donateButton.background-color": "#22C55E",
-        "floating-chat.donateButton.text-color": "#fff",
-        "floating-chat.donateButton.overflow": "hidden",
-      });
-    </script>
   </body>
+  <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
+  <script>
+    kofiWidgetOverlay.draw("manuelcalso", {
+      type: "floating-chat",
+      "floating-chat.donateButton.text": "Support me",
+      "floating-chat.donateButton.background-color": "#5bc0de",
+      "floating-chat.donateButton.text-color": "#323842",
+    });
+  </script>
 </html>
