nueva prueba suport buton float

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>juancalleros.com</title>
   </head>
   <body>
+    <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
+    <script>
+      kofiWidgetOverlay.draw("manuelcalso", {
+        type: "floating-chat",
+        "floating-chat.donateButton.text": "Support me",
+        "floating-chat.donateButton.background-color": "#5bc0de",
+        "floating-chat.donateButton.text-color": "#323842",
+      });
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script
