controles en video

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       src="https://storage.ko-fi.com/cdn/widget/Widget_2.js"
     ></script>
     <script type="text/javascript">
-      kofiwidget2.init("Support Me", "#22c55e", "J3J3XP2YF");
+      kofiwidget2.init("Support Me", "#22C55E", "J3J3XP2YF");
       kofiwidget2.draw();
     </script>
   </body>
