--- a/index.html
+++ b/index.html
@@ -37,5 +37,21 @@
       kofiwidget2.init("Support Me", "#22C55E", "J3J3XP2YF");
       kofiwidget2.draw();
     </script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6030131474192307"
+      crossorigin="anonymous"
+    ></script>
+    <ins
+      class="adsbygoogle"
+      style="display: block; text-align: center"
+      data-ad-layout="in-article"
+      data-ad-format="fluid"
+      data-ad-client="ca-pub-6030131474192307"
+      data-ad-slot="8786916730"
+    ></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   </body>
 </html>
