--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
     ></script>
     <ins
       class="adsbygoogle"
-      style="display: block; text-align: center"
-      data-ad-layout="in-article"
-      data-ad-format="fluid"
+      style="display: block"
+      data-ad-format="autorelaxed"
       data-ad-client="ca-pub-6030131474192307"
-      data-ad-slot="8786916730"
+      data-ad-slot="1483141784"
     ></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
