--- a/index.html
+++ b/index.html
@@ -37,20 +37,22 @@
       kofiwidget2.init("Support Me", "#22C55E", "J3J3XP2YF");
       kofiwidget2.draw();
     </script>
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6030131474192307"
-      crossorigin="anonymous"
-    ></script>
-    <ins
-      class="adsbygoogle"
-      style="display: block"
-      data-ad-format="autorelaxed"
-      data-ad-client="ca-pub-6030131474192307"
-      data-ad-slot="1483141784"
-    ></ins>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <div class="flex justify-center">
+      <script
+        async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6030131474192307"
+        crossorigin="anonymous"
+      ></script>
+      <ins
+        class="adsbygoogle"
+        style="display: block"
+        data-ad-format="autorelaxed"
+        data-ad-client="ca-pub-6030131474192307"
+        data-ad-slot="1483141784"
+      ></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
   </body>
 </html>
