--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       kofiwidget2.init("Support Me", "#22C55E", "J3J3XP2YF");
       kofiwidget2.draw();
     </script>
-    <div class="flex justify-center">
+    <div class="anuncio-footer">
       <script
         async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6030131474192307"
