--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
     </script>
   </head>
   <body>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6030131474192307"
+      crossorigin="anonymous"
+    ></script>
+    <!-- grafico horizontal -->
+    <ins
+      class="adsbygoogle"
+      style="display: flex"
+      data-ad-client="ca-pub-6030131474192307"
+      data-ad-slot="5302133140"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script
