--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
     <ins
       class="adsbygoogle"
       style="display: block"
+      data-ad-format="fluid"
+      data-ad-layout-key="-ez+3k+ee-fa-db"
+      data-ad-client="ca-pub-6030131474192307"
+      data-ad-slot="9662752819"
+    ></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6030131474192307"
+      crossorigin="anonymous"
+    ></script>
+    <ins
+      class="adsbygoogle"
+      style="display: block"
       data-ad-format="autorelaxed"
       data-ad-client="ca-pub-6030131474192307"
       data-ad-slot="1483141784"
