caracteristicas a flex en ads

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     ></script>
     <ins
       class="adsbygoogle"
-      style="display: block"
+      style="display: flex"
       data-ad-format="fluid"
       data-ad-layout-key="-ez+3k+ee-fa-db"
       data-ad-client="ca-pub-6030131474192307"
@@ -77,7 +77,7 @@
     ></script>
     <ins
       class="adsbygoogle"
-      style="display: block"
+      style="display: flex"
       data-ad-format="autorelaxed"
       data-ad-client="ca-pub-6030131474192307"
       data-ad-slot="1483141784"
