--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
     </script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script
-      type="text/javascript"
-      src="https://storage.ko-fi.com/cdn/widget/Widget_2.js"
-    ></script>
-    <script type="text/javascript">
-      kofiwidget2.init("Support Me", "#22C55E", "J3J3XP2YF");
-      kofiwidget2.draw();
-    </script>
+
+    <iframe
+      id="kofiframe"
+      src="https://ko-fi.com/manuelcalso/?hidefeed=true&widget=true&embed=true&preview=true"
+      style="border: none; width: 100%; padding: 4px; background: #f9f9f9"
+      height="712"
+      title="manuelcalso"
+    ></iframe>
+
     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6030131474192307"
