--- a/index.html
+++ b/index.html
@@ -1,88 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/cool-svgrepo-com.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-adsense-account" content="ca-pub-6030131474192307" />
-    <title>juancalleros.com</title>
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6030131474192307"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-CQHYQ2721E"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
 
-      gtag("config", "G-CQHYQ2721E");
-    </script>
-  </head>
-  <body>
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6030131474192307"
-      crossorigin="anonymous"
-    ></script>
-    <!-- grafico horizontal -->
-    <ins
-      class="adsbygoogle"
-      style="display: flex"
-      data-ad-client="ca-pub-6030131474192307"
-      data-ad-slot="5302133140"
-      data-ad-format="auto"
-      data-full-width-responsive="true"
-    ></ins>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-    <iframe
-      id="kofiframe"
-      src="https://ko-fi.com/manuelcalso/?hidefeed=true&widget=true&embed=true&preview=true"
-      style="border: none; width: 100%; padding: 4px; background: #f9f9f9"
-      height="712"
-      title="manuelcalso"
-    ></iframe>
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6030131474192307"
-      crossorigin="anonymous"
-    ></script>
-    <ins
-      class="adsbygoogle"
-      style="display: flex"
-      data-ad-format="fluid"
-      data-ad-layout-key="-ez+3k+ee-fa-db"
-      data-ad-client="ca-pub-6030131474192307"
-      data-ad-slot="9662752819"
-    ></ins>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6030131474192307"
-      crossorigin="anonymous"
-    ></script>
-    <ins
-      class="adsbygoogle"
-      style="display: flex"
-      data-ad-format="autorelaxed"
-      data-ad-client="ca-pub-6030131474192307"
-      data-ad-slot="1483141784"
-    ></ins>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index, follow" />
+  <meta name="description"
+    content="Explora juancalleros.com: artículos de calidad sobre desarrollo web, aplicaciones móviles y tecnología, con soporte en Ko-fi y contenido optimizado para tus necesidades." />
+  <meta name="google-adsense-account" content="ca-pub-6030131474192307" />
+  <meta property="og:title" content="juancalleros.com" />
+  <meta property="og:description"
+    content="Visita juancalleros.com para contenido de valor y apoyo a través de Ko-fi." />
+  <meta property="og:url" content="https://juancalleros.com" />
+  <meta property="og:image" content="/cool-svgrepo-com.svg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="juancalleros.com" />
+  <meta name="twitter:description"
+    content="Explora juancalleros.com y apoya a través de Ko-fi. Contenido optimizado para ti." />
+  <meta name="twitter:image" content="/cool-svgrepo-com.svg" />
+  <link rel="icon" type="image/svg+xml" href="/cool-svgrepo-com.svg" />
+  <title>Juan Calleros - Desarrollo de Páginas Web y Apps Móviles | Contenido Optimizado y de Calidad</title>
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6030131474192307"
+    crossorigin="anonymous"></script>
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CQHYQ2721E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+    gtag("config", "G-CQHYQ2721E");
+  </script>
+</head>
+
+<body>
+  <header class="sr-only">
+    <h1>Bienvenido a juancalleros.com</h1>
+    <p>Descubre contenido de alta calidad sobre mis proyectos en desarrollo web y aplicaciones móviles, donde la
+      innovación y la creatividad se encuentran.</p>
+  </header>
+  
+  <!-- Google Ads Horizontal -->
+  <section aria-label="Publicidad Horizontal">
+    <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6030131474192307" data-ad-slot="5302133140"
+      data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  </section>
+
+  <!-- Main Content -->
+  <main id="root"></main>
+
+  <!-- Ko-fi Iframe -->
+  <section aria-label="Apoyo Ko-fi">
+    <iframe id="kofiframe" src="https://ko-fi.com/manuelcalso/?hidefeed=true&widget=true&embed=true&preview=true"
+      style="border: none; width: 100%; padding: 4px; background: #f9f9f9" height="712" title="Apoyo en Ko-fi"></iframe>
+  </section>
+
+  <!-- Google Ads Fluid -->
+  <section aria-label="Publicidad Fluid">
+    <ins class="adsbygoogle" style="display: block" data-ad-format="fluid" data-ad-layout-key="-ez+3k+ee-fa-db"
+      data-ad-client="ca-pub-6030131474192307" data-ad-slot="9662752819"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  </section>
+
+  <!-- Google Ads Auto Relaxed -->
+  <section aria-label="Publicidad Auto Relaxed">
+    <ins class="adsbygoogle" style="display: block" data-ad-format="autorelaxed"
+      data-ad-client="ca-pub-6030131474192307" data-ad-slot="1483141784"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  </section>
+
+  <!-- Main Script -->
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
