headers y footers en posts

--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
 
 <body>
   <header class="sr-only">
-    <h1>Bienvenido a juancalleros.com</h1>
-    <p>Descubre contenido de alta calidad sobre mis proyectos en desarrollo web y aplicaciones móviles, donde la
-      innovación y la creatividad se encuentran.</p>
+    <h1 class="sr-only">Bienvenido a juancalleros.com</h1>
+    <p class="sr-only">Descubre contenido de alta calidad sobre mis proyectos en desarrollo web y aplicaciones móviles, donde la innovación y la creatividad se encuentran.</p>
   </header>
-  
+
   <!-- Google Ads Horizontal -->
   <section aria-label="Publicidad Horizontal">
     <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6030131474192307" data-ad-slot="5302133140"
