--- a/index.html
+++ b/index.html
@@ -35,13 +35,30 @@
     gtag("js", new Date());
     gtag("config", "G-CQHYQ2721E");
   </script>
+
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-WNXTBCQ9');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body>
   <header class="sr-only">
     <h1 class="sr-only">Bienvenido a juancalleros.com</h1>
-    <p class="sr-only">Descubre contenido de alta calidad sobre mis proyectos en desarrollo web y aplicaciones móviles, donde la innovación y la creatividad se encuentran.</p>
+    <p class="sr-only">Descubre contenido de alta calidad sobre mis proyectos en desarrollo web y aplicaciones móviles,
+      donde la innovación y la creatividad se encuentran.</p>
   </header>
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNXTBCQ9" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <!-- Google Ads Horizontal -->
   <section aria-label="Publicidad Horizontal">
