--- a/index.html
+++ b/index.html
@@ -51,8 +51,28 @@
 <body>
   <header class="sr-only">
     <h1 class="sr-only">Bienvenido a juancalleros.com</h1>
-    <p class="sr-only">Descubre contenido de alta calidad sobre mis proyectos en desarrollo web y aplicaciones móviles,
-      donde la innovación y la creatividad se encuentran.</p>
+  
+    <p class="sr-only">
+      juancalleros.com es un espacio digital donde se combinan desarrollo web moderno,
+      aplicaciones móviles, herramientas interactivas y experimentación con inteligencia artificial.
+    </p>
+  
+    <p class="sr-only">
+      Aquí encontrarás proyectos prácticos como calculadoras financieras de interés compuesto,
+      juegos web interactivos como Tetris, herramientas para desarrolladores,
+      generadores de voz con inteligencia artificial y artículos técnicos en el blog.
+    </p>
+  
+    <p class="sr-only">
+      El sitio está enfocado en crear soluciones útiles, experiencias optimizadas para el usuario
+      y proyectos reales construidos con tecnologías como React, JavaScript y diseño responsivo,
+      orientados tanto a usuarios finales como a desarrolladores.
+    </p>
+  
+    <p class="sr-only">
+      Este portafolio refleja un enfoque en innovación, aprendizaje continuo y monetización
+      responsable de aplicaciones web mediante publicidad, herramientas gratuitas y servicios digitales.
+    </p>
   </header>
 
   <!-- Google Tag Manager (noscript) -->
